// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar matches pure component snapshot 1`] = `
<div
  id="navbar"
>
  <Menu
    fixed="top"
    style={
      Object {
        "boxShadow": "none",
      }
    }
  >
    <Container>
      <MenuItem>
        <Header>
          Teebox.io
        </Header>
      </MenuItem>
      <MenuMenu
        position="right"
      >
        <Connect(ModalTrigger)
          id="SIGN_IN_MODAL"
          key="login"
          text="Login"
          wrapper={[Function]}
        />
        <Connect(ModalTrigger)
          id="REGISTRATION_MODAL"
          key="signup"
          text="Sign up"
          wrapper={[Function]}
        />
      </MenuMenu>
    </Container>
  </Menu>
</div>
`;

exports[`Navbar matches pure component when currentUser is present snapshot 1`] = `
<div
  id="navbar"
>
  <Menu
    fixed="top"
    style={
      Object {
        "boxShadow": "none",
      }
    }
  >
    <Container>
      <MenuItem>
        <Header>
          Teebox.io
        </Header>
      </MenuItem>
      <MenuMenu
        position="right"
      >
        <Dropdown
          additionLabel="Add "
          additionPosition="top"
          closeOnBlur={true}
          deburr={false}
          icon="dropdown"
          item={true}
          minCharacters={1}
          noResultsMessage="No results found."
          openOnFocus={true}
          renderLabel={[Function]}
          searchInput="text"
          selectOnBlur={true}
          selectOnNavigation={true}
          trigger={
            <AccountProfileAvatar
              profile={
                Immutable.Map {
                  name: "name",
                }
              }
            />
          }
          wrapSelection={true}
        >
          <DropdownMenu>
            <DropdownHeader>
              My Account
            </DropdownHeader>
            <DropdownItem>
              <a
                onClick={[Function]}
              >
                Sign out
              </a>
            </DropdownItem>
          </DropdownMenu>
        </Dropdown>
      </MenuMenu>
    </Container>
  </Menu>
</div>
`;
